--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -4,21 +4,41 @@
       <h1>Project Details</h1>
 
       <div *ngIf="project$ | async as project">
-        <h1>{{ project.title }}</h1>
+        <h2 class="mb-3">{{ project.title }}</h2>
         <p>{{ project.description }}</p>
 
         <form [formGroup]="bidForm" (ngSubmit)="onSubmitBid()">
-          <div class="form-group">
-            <label for="bidAmount">Bid Amount</label>
+          <div class="mb-3">
+            <label for="amount" class="form-label">Bid Amount</label>
             <input
+              id="amount"
+              formControlName="amount"
               type="number"
-              id="bidAmount"
-              [(ngModel)]="bidAmount"
-              name="bidAmount"
               class="form-control"
             />
+            <div
+              *ngIf="
+                bidForm.get('amount')?.invalid &&
+                (bidForm.get('amount')?.touched || bidForm.get('amount')?.dirty)
+              "
+              class="text-danger"
+            >
+              <div *ngIf="bidForm.get('amount')?.errors?.['required']">
+                Bid Amount is required.
+              </div>
+              <div *ngIf="bidForm.get('amount')?.errors?.['min']">
+                Bid Amount must be at least 1.
+              </div>
+            </div>
           </div>
-          <button type="submit" class="btn btn-primary">Submit Bid</button>
+
+          <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="bidForm.invalid"
+          >
+            Submit
+          </button>
         </form>
       </div>
     </div>
